[package]
name = "RealVampire"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
rayon = "1.10.0"
specs = "0.20.0"

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.05.24" # release 2024.05.24 # to check for a new one, check https://github.com/microsoft/vcpkg/releases

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
